2009-11-01  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el: 
	Check that (equal "hi there" [hi there]) gives nil, instead of
	erroring; fixes a bug Ben introduced in 2002. 

2009-10-12  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el : 
	Revert to the old Unicode mapping for scaron once we're finished
	testing it. 
	Don't check the fixed-width coding systems with odd line endings
	for ASCII-transparency; maybe we should, but that would require
	that invalid sequence characters for on-disk ?\x0a be generated by
	Macintosh line-ending coding systems, for example. 

2009-10-05  Jerry James  <jamesjer@xemacs.org>

	* gtk/event-stream-tests.el: Add GPL v2 or later notice with
	explicit permission of Bill Perry (private email).
	* gtk/gnome-test.el: Ditto.
	* gtk/gtk-embedded-test.el: Ditto.
	* gtk/gtk-extra-test.el: Ditto.
	* gtk/statusbar-test.el: Ditto.
	* gtk/toolbar-test.el: Ditto.
	* gtk/xemacs-toolbar.el: Ditto.

2009-09-19  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el: 
	Check a coding system's type, not an 8-bit-fixed property, for
	whether that coding system should be treated as a fixed-width
	coding system.
	* automated/query-coding-tests.el:
	Don't test the query coding functionality for mswindows-multibyte
	coding systems, it's not yet implemented.

2009-09-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el (featurep): 
	Check that a Unicode bug with very short inputs has been fixed.

2009-09-02  Jerry James  <james@xemacs.org>

	* reproduce-crashes.el (12): New bug.

2009-08-31  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el (Assert-rounding): 
	Remove an overly-verbose failure message here. 
	Correct a couple of tests which were buggy in themselves. Add
	three new tests, checking the behaviour of #'or and #'and when
	passed zero arguments, and a Known-Bug-Expect-Failure call
	involving letf and values. (The bug predates the C-level
	multiple-value implementation.) 
