@@ -1,3 +1,8 @@
+2009-11-02  Stephen Turnbull  <stephen@xemacs.org>
+
+	* automated/mule-tests.el (default-process-coding-system):
+	Check that binding it to nil is OK.
+
 2009-11-01  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* automated/lisp-tests.el: 
